--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 				<div class="top">
 
-					<!-- Logo -->
+					<!-- Logo 
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Jane Doe</h1>
 							<p>Hyperspace Engineer</p>
 						</div>
-
+					-->
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
