--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 			<div id="header">
 
 				<div class="top">
-
+					<div>
+						
+					</div>
 					<!-- Logo 
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
