--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 				<div class="top">
 					<div>
-						<h1>Bacon!</h1>
+						<center><h1>Menu</h1></center>
+						<p> </p>
 					</div>
 					<!-- Logo 
 						<div id="logo">
