--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<div class="top">
 					<div>
-						<center><h1>Menu</h1></center>
+						<center><h1></h1></center>
 						<p> </p>
 					</div>
 					<!-- Logo 
