--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<div class="bottom">
 
-					<!-- Social Icons -->
+					<!-- Social Icons 
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -50,7 +50,7 @@
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
-
+					-->
 				</div>
 
 			</div>
@@ -63,10 +63,14 @@
 						<div class="container">
 
 							<header>
+								<!--
 								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
 								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
+								-->
+								<h2 class="alt">Welcome to <strong>Inspired Wellness</strong>
+								</h2>
 							</header>
 
 							<footer>
