--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
 								-->
 								<h2 class="alt">Welcome to <strong>Inspired Wellness</strong>
 								</h2>
+								<p>Ligula scelerisque justo sem accumsan diam quis<br />
+								vitae natoque dictum sollicitudin elementum.</p>								
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">explore</a>
 							</footer>
 
 						</div>
