--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 								-->
 								<h2 class="alt">Welcome to <strong>Inspired Wellness</strong>
 								</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>								
+								<p>Find your health inspiration<br /></p>								
 							</header>
 
 							<footer>
