--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								-->
 								<h2 class="alt">Welcome to <strong>Inspired Wellness</strong>
 								</h2>
-								<p>Find your health inspiration<br /></p>								
+								<p>find your health inspiration<br /></p>								
 							</header>
 
 							<footer>
