--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact Info</span></a></li>
+								<li><a href="#contact info" id="contact-link"><span class="icon solid fa-envelope">Contact Info</span></a></li>
 							</ul>
 						</nav>
 
@@ -163,7 +163,7 @@
 					</section>
 
 				<!-- Contact Info-->
-					<section id="contact" class="four">
+					<section id="contact info" class="four">
 						<div class="container">
 
 							<header>
