--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#classes" id="classes-link"><span class="icon solid fa-th">Classes</span></a></li>
+								<li><a href="#pricing" id="pricing-link"><span class="icon solid fa-user">Pricing</span></a></li>
 								<li><a href="#contact info" id="contact-link"><span class="icon solid fa-envelope">Contact Info</span></a></li>
 							</ul>
 						</nav>
@@ -75,24 +75,21 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">explore</a>
+								<a href="#classes" class="button scrolly">explore</a>
 							</footer>
 
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+				<!-- Classes -->
+					<section id="classes" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Classes</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Everything from Yoga to fights to the death</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -142,22 +139,18 @@
 						</div>
 					</section>
 
-				<!-- About Me -->
-					<section id="about" class="three">
+				<!-- Pricing -->
+					<section id="pricing" class="three">
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>Pricing</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>$1 - Something<br />
+							$2 - Something else<br /></p>
 
 						</div>
 					</section>
